Correction to text-align in headers

--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,11 @@ h2 {
   padding-bottom: 40px;
   margin: 0;
 }
-h3 {
-  text-align: left;
-}
 h4 {
   margin-block-start: 2.5rem;
   margin-block-end: 0.5rem;
   font-size: 1.1rem;
+  text-align: left;
 }
 p {
   line-height: 2;
